--- a/blogs.css
+++ b/blogs.css
@@ -1,9 +1,17 @@
-h1{
+/* h1{
     background-color: aquamarine;
-}
+} */
+body{
+    /* width: 80%;
+     height: 100%; 
+     border-style: groove;
+    justify-content: center;
+    align-self: center;  */
+    background-color:lightcyan ;
 
+}
 .benefits{
-    background-color: bisque;
+
     margin: 10px;
     padding: 10px;
 }
@@ -17,12 +25,173 @@ h1{
 }
 
 .dailyDose{
-    background-color:coral;
+    /* background-color:coral; */
     margin: 10px;
     padding: 10px;
 }
 .sideEffects{
-    background-color:darkcyan;
+    /* background-color:darkcyan; */
     margin: 10px;
     padding: 10px;
+}
+
+.blogCard{
+    width: 400px;
+    margin: 30px auto;
+    border: 1px solid lightgray;
+    padding: 8px;
+    justify-content: space-between;
+    /* border-radius: 14px 14px 0 0; */
+
+}
+.blogImgCard{
+    width: 100%;
+    border-radius: 14px 14px 14px 14px ;
+
+}
+.user{
+    width: 30px;
+    border-radius: 50%;
+    display: flex;
+    margin-bottom: 10px;
+    align-items: center;
+    gap: 10px;
+}
+.profile{
+    width: 40px;
+    border-radius: 50%;
+    display: flex;
+    margin-bottom: 10px;
+    align-items: center;
+    gap: 10px;
+   
+}
+.profileicon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 40px;
+}
+.Post{
+    display: flex; 
+   margin-top: 50px;
+   gap: 20px;
+   flex-wrap: wrap;
+}
+
+.SearchBtn{
+    /* position: fixed; */
+    top: 5px;
+    background-color: aquamarine;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.needhelpbutton{
+    position: fixed;
+    top: 5px;
+    right: 5px;
+    background-color: aquamarine;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+.searchbox{
+    width: 400px;
+    height: 25px;
+    border-radius: 5px;
+}
+.searcbloglable{
+    font-size: 20px;
+    color: black;
+    font-style: italic;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+.searchb{
+    justify-content: center;
+    display: flex;
+    gap: 5px;
+    margin-top: 10px;
+    height: 25px;
+}
+.navlist{
+    list-style: none;
+}
+.blogshome{
+    display: flex;
+justify-content: space-between;
+}
+
+.HomeMenu{
+    display: flex;
+    gap:16px;
+   justify-content: center;
+   list-style: none;
+   margin-right: 40px;
+   color: black;
+   position: fixed;
+   background-color: aqua;
+   width: 100%;
+}
+.navmenu{
+    display: flex;
+    gap:16px;
+   justify-content: center;
+   list-style: none;
+   margin-right: 40px;
+   color: black;
+}
+#logo{
+    display: flex;
+    gap:16px;
+    list-style: none;
+}
+
+.blogpage{
+    display: flex;
+    gap:16px;
+}
+.recentpost{
+    position: sticky;
+    border-style: groove;
+    width: 50%;
+    margin-top: 80px;
+}
+.navlist{
+    width:fit-content;
+    justify-content: left;
+    font-style: italic;
+    flex-wrap: wrap;
+    margin: 2px;
+    padding: 2px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.recentpostlabel{
+    background-color: chocolate;
+    font-weight: 200;
+    font-size:xx-large;
+    text-align: center;
+    /* width: 10%; */
+}
+
+.menupadding{
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    background-color: bisque;
+    
+}
+
+.blogCardSection{
+    flex-wrap: wrap;
+}
+
+.blogContentArea{
+    width: 98%;
+    border-style: groove;
+    margin: 60px;
+    padding: 20px;
+    
 }
